--- a/style.css
+++ b/style.css
@@ -84,6 +84,27 @@ Sidebar
   & ul {
     display: grid;
     gap: 0.5rem;
+    & li {
+      display: flex;
+      gap: 0.5rem;
+      justify-content: space-between;
+      align-items: center;
+      cursor: pointer;
+      & .dropdown-container {
+        position: relative;
+        & .dropdown-menu {
+          padding: 0.5rem 1rem;
+          border: 1px solid #ccc;
+          background: rgba(0, 0, 0, 0.9);
+          position: absolute;
+          top: 100%;
+          left: 0;
+          border-radius: 4px;
+          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+          z-index: 1000;
+        }
+      }
+    }
   }
 }
 .project-listing {
@@ -100,17 +121,19 @@ Sidebar
   }
   & .add-project-form {
     display: grid;
-    gap: 0.1rem;
+    gap: 0.25rem;
     & input {
       width: auto;
       outline: none;
       padding: 5px 10px;
+      border-radius: 5px;
     }
     & button {
       padding: 5px 10px;
       color: hsla(64, 0%, 10%, 0.9);
       font-weight: 600;
       border-radius: 5px;
+      cursor: pointer;
     }
   }
 }
@@ -228,9 +251,34 @@ Add Task Button
       cursor: pointer;
     }
   }
+  & .dropdown-container {
+    position: relative;
+    display: inline-block;
+
+    & .dropdown-menu {
+      display: none;
+      border: 1px solid #ccc;
+      background: #fff;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      border-radius: 4px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      z-index: 1000;
+      & div {
+        padding: 10px;
+        cursor: pointer;
+        &:hover,
+        &:focus {
+          background-color: #e0e0e0;
+        }
+      }
+    }
+  }
 }
 .styled-button button,
-.dropdown-trigger {
+.add-task-form .dropdown-trigger {
   display: flex;
   align-items: center;
   background: #f0f0f0;
@@ -241,31 +289,5 @@ Add Task Button
   font-size: 16px;
   & .icon {
     margin-right: 8px;
-  }
-}
-
-.dropdown-container {
-  position: relative;
-  display: inline-block;
-
-  & .dropdown-menu {
-    display: none;
-    border: 1px solid #ccc;
-    background: #fff;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    border-radius: 4px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    z-index: 1000;
-    & div {
-      padding: 10px;
-      cursor: pointer;
-      &:hover,
-      &:focus {
-        background-color: #e0e0e0;
-      }
-    }
   }
 }
