--- a/style.css
+++ b/style.css
@@ -268,6 +268,14 @@ Task
   color: gray;
 }
 
+.task .menu-list {
+  padding: 0.5rem 0;
+  & span {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+  }
+}
+
 /* 
 =========
 Add Task Button
